[gd_scene load_steps=5 format=3 uid="uid://be6pwcmlsd53y"]

[ext_resource type="Script" uid="uid://m2070u8pduek" path="res://main.gd" id="1_ig7tw"]
[ext_resource type="PackedScene" uid="uid://b1k84dy28libu" path="res://enemy.tscn" id="2_h2yge"]
[ext_resource type="PackedScene" uid="uid://b4c2mgke873b4" path="res://player.tscn" id="3_1bvp3"]

[sub_resource type="Curve2D" id="Curve2D_0xm2m"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1149, -1, 0, 0, 0, 0, 1149, 645, 0, 0, 0, 0, 3, 643, 0, 0, 0, 0, 0, 0)
}
point_count = 5

[node name="Main" type="Node"]
script = ExtResource("1_ig7tw")
enemy_scene = ExtResource("2_h2yge")

[node name="EnemyTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="PlayerStart" type="Marker2D" parent="."]
position = Vector2(77, 305)

[node name="EnemyPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_0xm2m")

[node name="EnemySpawnLocations" type="PathFollow2D" parent="EnemyPath"]
rotation = -0.000870322

[node name="Player" parent="." instance=ExtResource("3_1bvp3")]

[connection signal="timeout" from="EnemyTimer" to="." method="_on_enemy_timer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_start_timer_timeout"]
[connection signal="hit" from="Player" to="." method="game_over"]
